--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "eslint": "5",
+    "eslint-utils":"^1.4.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest-html-reporter": "^2.5.0",
